# N-Body-Simulation

./: CMakeLists.txt  README.md
.github/workflows/: qodana_code_quality.yml
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  NBodyWidget.cpp  NBodyWidget.h
